# dds

./: .gitignore  .gitmodules  Build.cmd  NOTICE.md  README.md
.github/workflows/: codeql.yml
AppDisagg/: DisaggStore.sln
AppDisagg/Client/: Client.cpp  Client.h
AppDisagg/Common/Include/: Config.h  LatencyHelpers.h
AppDisagg/ServerDDS/: ServerDDS.cpp  ServerDDS.h  ServerDDS.vcxproj  ServerDDS.vcxproj.filters
Common/Include/: DDSTypes.h  LatencyHelper.h  MsgTypes.h  Protocol.h
Common/Include/DPU/: Affinity.h  BackEndControl.h  BackEndTypes.h  CacheTable.h  FileService.h  HashFunctions.h  OffloadResponseRingBuffer.h  Profiler.h  ProfilerCC.h  RingBufferPolling.h
Common/Include/Host/: BackEndBridge.h  DDSFrontEndInterface.h  DMABuffer.h  LinkedList.h  Profiler.h  RDMC.h  RingBufferFaRMStyle.h  RingBufferLockBased.h  RingBufferNoConcurrency.h  RingBufferProgressive.h  RingBufferProgressiveFullyAligned.h  RingBufferProgressiveNotAligned.h
Common/Source/DPU/: BackEndControl.c  CacheTable.c  FileService.c  OffloadResponseRingBuffer.c  Profiler.c  ProfilerCC.cpp  RingBufferPolling.c
Common/Source/Host/: BackEndBridge.cpp  DMABuffer.cpp  LinkedList.cpp  Profiler.cpp  RDMC.cpp  RingBufferProgressive.cpp
DPDPU/3rdParties/TLDK/: BlueField-2.patch
DPDPU/Apps/DisaggStore/: DisaggStore.sln  draft.cpp
DPDPU/Apps/FASTER/: README.md
DPDPU/Benchmarks/: Benchmarks.sln
DPDPU/Benchmarks/TCPMeasurement/: Config.h  LatencyHelpers.h  TCPClient.cpp  TCPMeasurement.cpp  TCPMeasurement.vcxproj  TCPMeasurement.vcxproj.filters  TCPServer.cpp
DPDPU/Common/Include/: BackEndBridge.h  DDSFrontEndInterface.h  DDSTypes.h  DMABuffer.h  LatencyHelper.h  MsgType.h  MsgTypes.h  Protocol.h  RingBufferFaRMStyle.h  RingBufferLockBased.h  RingBufferNoConcurrency.h  RingBufferProgressive.h
DPDPU/Common/Source/: BackEndBridge.cpp  DMABuffer.cpp  (+5 more)
DPDPU/NetworkEngine/: Build.sh  DDSPipeline.json  README.md  Run.sh  meson.build
DPDPU/NetworkEngine/DDSBOWPipeline/: DDSBOWPipeline.json  ResumeDefaultBridge.sh  SetupBridgesForDDS.sh  build.sh  meson.build  run.sh
DPDPU/NetworkEngine/DDSBOWPipeline/src/: ActionModifyHeaders.c  DDSTrafficDirecting.c  PEPOTLDKTCP.c  PEPOTLDKTCP.h
DPDPU/NetworkEngine/DDSBOWPipeline/tldk/libtle_l4p/: ctx.c  misc.h  osdep.h  stream_table.c  syncookie.h  tcp_ctl.h  tcp_ofo.c  tcp_rxtx.c  tcp_txq.h  tle_tcp.h  udp_stream.h
DPDPU/NetworkEngine/DDSBOWPipeline/tldk/libtle_memtank/: tle_memtank.h
DPDPU/NetworkEngine/Include/: AppEchoTCP.h  DDSBOWCore.h  DDSTrafficDirecting.h  PEPOLinuxTCP.h
DPDPU/NetworkEngine/Source/: ActionRedirectPackets.c  AppEchoTCPDirect.c  DDSBOWCore.c  DDSBOWPipeline.c  PEPOLinuxTCP.c
DPDPU/NetworkEngine/TLDK/libtle_dring/: dring.c
DPDPU/NetworkEngine/TLDK/libtle_l4p/: ctx.h  event.c  halfsiphash.h  stream_table.h  tcp_stream.c  tcp_stream.h  tcp_timer.h  tcp_tx_seg.h  tle_udp.h  udp_rxtx.c
DPDPU/NetworkEngine/TLDK/libtle_memtank/: memtank.c  memtank.h
DPDPU/NetworkEngine/TLDK/libtle_misc/: tle_dpdk_wrapper.h  tle_version.h
DPDPU/NetworkEngine/TLDK/libtle_timer/: tle_timer.h
DPDPU/OffloadEngine/: OffloadEngine.sln
DPDPU/OffloadEngine/BackEnd/: CMakeLists.txt
DPDPU/OffloadEngine/BackEnd/Include/: UDF.h  affinity.h
DPDPU/OffloadEngine/BackEnd/Source/: Makefile  UDF.c
DPDPU/Scripts/: CountLoC.sh
DPDPU/StorageEngine/: BuildStorage.cmd  README.md  StorageEngine.sln
DPDPU/StorageEngine/DDSBackEndDPUService/: Build.sh  BuildDebug.sh  Makefile  Makefile.dpu  Makefile.host  bdev.json  dds_bdev.json  meson.build
DPDPU/StorageEngine/DDSBackEndDPUService/Include/: Affinity.h  ControlPlaneHandler.h  ControlPlaneHandlers.h  DPUBackEnd.h  DPUBackEndDir.h  DPUBackEndFile.h  DPUBackEndStorage.h  DataPlaneHandlers.h  FileBackEnd.h  FileBackEndTypes.h  SPDKThreads.h  Zmalloc.h  bdev.h
DPDPU/StorageEngine/DDSBackEndDPUService/Source/: ControlPlaneHandlers.c  DPUBackEndDir.c  DPUBackEndFile.c  DPUBackEndStorage.c  DataPlaneHandlers.c  FileBackEnd.c  RingBufferPolling.c  SPDKThreads.c  Zmalloc.c  bdev.c
Main/: Build.sh  NetworkConfig.json  Run.sh  StorageConfig.json  meson.build  meson_options.txt
Main/Source/: Main.c
NDSPI/src/: netdirect.sln
NetworkEngine/Configs/: DDSPipelineExample.json
NetworkEngine/Include/: AppEchoTCP.h  DDSBOWCore.h  DDSBOWPipeline.h  DDSTrafficDirecting.h  PEPOLinuxTCP.h  PEPOTLDKTCP.h
NetworkEngine/Patches/: dpdk_utils.c  dpdk_utils.patch
NetworkEngine/Source/: ActionModifyHeaders.c  ActionRedirectPackets.c  AppEchoTCPDirect.c  DDSBOWCore.c  DDSBOWPipeline.c  DDSTrafficDirecting.c  Main.c  PEPOLinuxTCP.c  PEPOTLDKTCP.c
OffloadEngine/DPU/: .gitignore
OffloadEngine/UDFSamples/: OffloadFunc.c  OffloadPred.c
Samples/Tests/: Makefile  test.c  test_async.c  test_io_in_loop.c  test_multithread.c  test_multithread_will_get_stuck.c  test_old.c  test_sendmsg.c  test_start_on_new_pthread.c  test_sync_busy_wait.c  test_with_main_loop.c
Scripts/: ConfigureHugePages.sh  HostAddArpLinux.sh  InstallSPDK.sh  ResumeDefaultOVS.sh  SetupIP.sh  SetupOVSForDDS.sh  SetupScalableFunctions.sh
StorageEngine/: StorageEngine.sln
StorageEngine/DDSBackEndDPUService/: BuildDebug.sh  BuildRelease.sh  Run.sh  SpdkDev.json  meson.build  meson_options_dpu.txt  meson_options_host.txt
StorageEngine/DDSBackEndDPUService/Include/: ControlPlaneHandler.h  DPUBackEnd.h  DPUBackEndDir.h  DPUBackEndFile.h  DPUBackEndStorage.h  DataPlaneHandlers.h  FileBackEnd.h  Zmalloc.h  bdev.h
StorageEngine/DDSBackEndDPUService/Patches/: spdk_dpdk_init.c  spdk_dpdk_init.patch  spdk_dpdk_threads.c  spdk_dpdk_threads.patch  spdk_reactor.c  spdk_reactor.patch
StorageEngine/DDSBackEndDPUService/Source/: ControlPlaneHandlers.c  DPUBackEndDir.c  DPUBackEndFile.c  DPUBackEndStorage.c  DataPlaneHandlers.c  FileBackEnd.c  Main.c  Zmalloc.c  bdev.c
StorageEngine/DDSFrontEnd/: DDSBackEndBridge.cpp  DDSBackEndBridge.h  DDSBackEndBridgeBase.h  DDSBackEndBridgeForLocalMemory.cpp  DDSBackEndBridgeForLocalMemory.h  DDSDir.cpp  DDSDir.h  DDSFile.cpp  DDSFile.h  DDSFrontEnd.cpp  DDSFrontEnd.h  DDSFrontEnd.vcxproj  DDSFrontEndConfig.h  DDSFrontEndTypes.h
(+268 files in other folders)
